--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "mobx": "^4.12.0",
     "mobx-react-lite": "^1.4.1",
     "node-fetch": "^2.6.0",
+    "path-to-regexp": "^3.0.0",
     "pino": "^5.13.0",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
